--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@gsap/react": "^2.1.1",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@nextui-org/react": "^2.2.10",
     "@reduxjs/toolkit": "^2.2.3",
+    "@types/video-react": "^0.15.6",
     "axios": "^1.6.8",
     "country-list-json": "^1.1.0",
     "framer-motion": "^11.0.27",
@@ -31,7 +33,9 @@
     "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.1.1"
+    "swiper": "^11.1.1",
+    "video-player": "^0.0.1",
+    "video-react": "^0.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
