--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "i18next-browser-languagedetector": "^7.2.1",
     "i18next-http-backend": "^2.5.0",
     "i18next-locize-backend": "^6.4.1",
+    "lottie-react": "^2.4.0",
     "nextjs-toploader": "^1.6.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
